--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
 
     <header>
-      <img src="assets/images/logo.png" class="logo" alt="fisheye logo"/>
+      <img src="images/logo.png" class="logo" alt="fisheye logo"/>
       <h1>Nos photographes</h1>
     </header>
 
@@ -20,7 +20,6 @@
       <div class="photographer_section"></div>
     </main>
 
-    <script src="scripts/templates/photographer.js"></script>
     <script src="scripts/pages/index.js"></script>
 
   </body>
