--- a/index.html
+++ b/index.html
@@ -1,27 +1,27 @@
 <!DOCTYPE html>
 <html lang="fr">
 
-  <head>
-    <link href="css/style.css" rel="stylesheet" type="text/css" />
-    <meta charset="utf-8">
-    <link rel="icon" type="image/png" href="assets/favicon.png">
-    <link href="https://fonts.googleapis.com/css?family=DM+Sans&display=swap" rel="stylesheet">
-    <title>Fisheye</title>
-  </head>
+<head>
+  <link href="css/style.css" rel="stylesheet" type="text/css" />
+  <meta charset="utf-8">
+  <link rel="icon" type="image/png" href="assets/favicon.png">
+  <link href="https://fonts.googleapis.com/css?family=DM+Sans&display=swap" rel="stylesheet">
+  <title>Fisheye</title>
+</head>
 
-  <body>
+<body>
 
-    <header>
-      <img src="images/logo.png" class="logo" alt="fisheye logo"/>
-      <h1>Nos photographes</h1>
-    </header>
+  <header>
+    <a href="index.html"><img src="images/logo.png" class="logo" alt="fisheye logo" /></a>
+    <h1>Nos photographes</h1>
+  </header>
 
-    <main id="main">
-      <div class="photographer_section"></div>
-    </main>
+  <main id="main">
+    <div class="photographer_section"></div>
+  </main>
 
-    <script src="scripts/pages/index.js"></script>
+  <script src="scripts/pages/index.js"></script>
 
-  </body>
-  
+</body>
+
 </html>
