--- a/photographer.html
+++ b/photographer.html
@@ -21,7 +21,7 @@
 
     <section class="photograph-header">
       <div class="info"></div>
-      <button class="contact-button" onclick="displayModal(name)">Contactez-moi</button>
+      <button class="contact-button" onclick="displayModal()">Contactez-moi</button>
       <div class="portrait"></div>
     </section>
 
@@ -35,18 +35,18 @@
       </select>
     </section>
 
-    <section class="media"></section>
+    <section class="media" id="mediaContainer"></section>
 
     <section class="like"></section>
 
-      <section id="lightbox">
-        <div class="lightbox-content">
-            <span class="close-lightbox" onclick="fermerLightbox()">&#x2715;</span>
-            <div id="contenu-photo-lightbox"></div>
-            <span class="titre-photo" id="titre-photo-lightbox"></span>
-            <span class="arrow" aria-label="Image précédente" id="left-arrow" onclick="flecheGauche(index)">&#8592;</span>
-            <span class="arrow" aria-label="Image suivante" id="right-arrow" onclick="flecheDroite(index)">&#8594;</span>
-        </div>
+    <section id="lightbox">
+      <div class="lightbox-content">
+          <span class="close-lightbox" onclick="fermerLightbox()">&#x2715;</span>
+          <div id="contenu-photo-lightbox"></div>
+          <span class="titre-photo" id="titre-photo-lightbox"></span>
+          <span class="arrow" aria-label="Image précédente" id="left-arrow" onclick="flecheGauche(index)">&#8592;</span>
+          <span class="arrow" aria-label="Image suivante" id="right-arrow" onclick="flecheDroite(index)">&#8594;</span>
+      </div>
     </section>
 
   </main>
