--- a/photographer.html
+++ b/photographer.html
@@ -37,17 +37,17 @@
 
     <section class="media" id="mediaContainer"></section>
 
-    <section class="like"></section>
+    <section class="onglet"></section>
 
-    <section id="lightbox">
+    <!--section id="lightbox" class="hidden">
       <div class="lightbox-content">
-          <span class="close-lightbox" onclick="fermerLightbox()">&#x2715;</span>
+          <span class="close-lightbox" onclick="closeLightbox()">&#x2715;</span>
           <div id="contenu-photo-lightbox"></div>
           <span class="titre-photo" id="titre-photo-lightbox"></span>
           <span class="arrow" aria-label="Image précédente" id="left-arrow" onclick="flecheGauche(index)">&#8592;</span>
           <span class="arrow" aria-label="Image suivante" id="right-arrow" onclick="flecheDroite(index)">&#8594;</span>
       </div>
-    </section>
+    </section-->
 
   </main>
 
