incrementation of likes

--- a/photographer.html
+++ b/photographer.html
@@ -26,7 +26,7 @@
     </section>
 
     <section class="sort">
-      <label for="sort-element">Trier par </label>
+      <label class="sort-txt" for="sort-element">Trier par </label>
       <select id="sort-element" onchange="trier(this)">
           <option disabled selected>---</option>
           <option>Popularité</option>
