--- a/photographer.html
+++ b/photographer.html
@@ -39,7 +39,7 @@
 
     <section class="onglet"></section>
 
-    <!--section id="lightbox" class="hidden">
+    <section class="lightbox">
       <div class="lightbox-content">
           <span class="close-lightbox" onclick="closeLightbox()">&#x2715;</span>
           <div id="contenu-photo-lightbox"></div>
@@ -47,7 +47,7 @@
           <span class="arrow" aria-label="Image précédente" id="left-arrow" onclick="flecheGauche(index)">&#8592;</span>
           <span class="arrow" aria-label="Image suivante" id="right-arrow" onclick="flecheDroite(index)">&#8594;</span>
       </div>
-    </section-->
+    </section>
 
   </main>
 
