--- a/photographer.html
+++ b/photographer.html
@@ -25,14 +25,14 @@
       <div class="portrait"></div>
     </section>
 
-    <section class="sort">
-      <label class="sort-txt" for="sort-element">Trier par </label>
-      <select id="sort-element" onchange="trier(this)">
-        <option disabled selected>---</option>
-        <option>Popularité</option>
-        <option>Date</option>
-        <option>Titre</option>
-      </select>
+    <section class="sort" id="sort-dropdown">
+      <div class="sort-txt">Trier par</div>
+      <div class="sort-btn">---</div>
+      <div class="sort-element">
+        <div class="dropdown-option" data-sort="popularity">Popularité</div>
+        <div class="dropdown-option" data-sort="date">Date</div>
+        <div class="dropdown-option" data-sort="title">Titre</div>
+      </div>
     </section>
 
     <section class="media" id="mediaContainer"></section>
@@ -41,11 +41,11 @@
 
     <section class="lightbox">
       <div class="lightbox-content">
-        <span class="close-lightbox" onclick="closeLightbox()">&#x2715;</span>
+        <span aria-description="Fermer la lightbox" class="close-lightbox" onclick="closeLightbox()">&#x2715;</span>
         <div id="contenu-photo-lightbox"></div>
         <span class="titre-photo" id="titre-photo-lightbox"></span>
-        <span class="arrow" id="left-arrow" onclick="flecheGauche(index)">&#8592;</span>
-        <span class="arrow" id="right-arrow" onclick="flecheDroite(index)">&#8594;</span>
+        <span aria-description="Image précédente" class="arrow" id="left-arrow" onclick="flecheGauche(index)">&#8592;</span>
+        <span aria-description="Image suivante" class="arrow" id="right-arrow"  onclick="flecheDroite(index)">&#8594;</span>
       </div>
     </section>
 
@@ -54,7 +54,7 @@
   <section class="modal">
     <header>
       <h2>Contactez-moi<span id="contact-name" tabindex="0"></span></h2>
-      <img src="images/icons/close.svg" onclick="closeModal()" alt="Bouton fermé" tabindex="0"/>
+      <img src="images/icons/close.svg" onclick="closeModal()" alt="Bouton fermé" tabindex="0" />
     </header>
     <form>
       <label class="label-form">Prénom</label>
@@ -74,7 +74,7 @@
 
   <script src="scripts/utils/sort.js"></script>
   <script src="scripts/utils/lightbox.js"></script>
-  <script src="scripts/pages/photographer.js"></script>
+  <script src="scripts/pages/photographer1.js"></script>
   <script src="scripts/utils/contactForm.js"></script>
 
 </body>
