--- a/photographer.html
+++ b/photographer.html
@@ -29,9 +29,9 @@
       <div class="sort-txt">Trier par</div>
       <div class="sort-btn">---</div>
       <div class="sort-element">
-        <div class="dropdown-option" data-sort="popularity">Popularité</div>
-        <div class="dropdown-option" data-sort="date">Date</div>
-        <div class="dropdown-option" data-sort="title">Titre</div>
+        <div class="dropdown-option" data-sort="Popularité">Popularité</div>
+        <div class="dropdown-option" data-sort="Date">Date</div>
+        <div class="dropdown-option" data-sort="Titre">Titre</div>
       </div>
     </section>
 
