--- a/photographer.html
+++ b/photographer.html
@@ -43,11 +43,11 @@
 
     <section class="lightbox">
       <div class="lightbox-content">
-        <span aria-description="Fermer la lightbox" class="close-lightbox" onclick="closeLightbox()">&#x2715;</span>
+        <span aria-description="Fermer la lightbox" class="close-lightbox" onclick="closeLightbox()"><img src="images/icons/close-lightbox.svg"/></span>
         <div id="contenu-photo-lightbox"></div>
         <span class="titre-photo" id="titre-photo-lightbox"></span>
-        <span aria-description="Image précédente" class="arrow" id="left-arrow" onclick="flecheGauche(index)">&#8592;</span>
-        <span aria-description="Image suivante" class="arrow" id="right-arrow"  onclick="flecheDroite(index)">&#8594;</span>
+        <span aria-description="Image précédente" class="arrow" id="left-arrow" onclick="flecheGauche(index)"><img src="images/icons/chevron-left-solid.svg" class="chevron"/></span>
+        <span aria-description="Image suivante" class="arrow" id="right-arrow"  onclick="flecheDroite(index)"><img src="images/icons/chevron-right-solid.svg" class="chevron"/></span>
       </div>
     </section>
 
