--- a/photographer.html
+++ b/photographer.html
@@ -27,13 +27,13 @@
 
     <section class="sort" id="sort-dropdown">
       <div class="sort-txt">Trier par</div>
-      <div class="sort-btn">---<i class="fa-solid fa-chevron-down"></i></div>
+      <button type="button" class="sort-btn">---<i class="fa-solid fa-chevron-down"></i></button>
       <div class="sort-element">
-        <div class="dropdown-option" data-sort="Popularité">Popularité<i class="fa-solid fa-chevron-up"></i></div>
+        <button type="button" class="dropdown-option" data-sort="Popularité">Popularité<i class="fa-solid fa-chevron-up"></i></button>
         <div class="line"></div>
-        <div class="dropdown-option" data-sort="Date">Date</div>
+        <button type="button" class="dropdown-option" data-sort="Date">Date</button>
         <div class="line"></div>
-        <div class="dropdown-option" data-sort="Titre">Titre</div>
+        <button type="button" class="dropdown-option" data-sort="Titre">Titre</button>
       </div>
     </section>
 
