--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 
   <header>
-    <a href="index.html"><img src="images/logo.png" class="logo" alt="fisheye logo" /></a>
+    <a href="index.html"><img src="images/logo.png" class="logo" aria-label="fisheye logo" /></a>
     <h1>Nos photographes</h1>
   </header>
 
