--- a/photographer.html
+++ b/photographer.html
@@ -14,7 +14,7 @@
 
 <body>
   <header>
-    <a href="index.html"><img src="images/logo.png" class="logo" alt="fisheye logo" /></a>
+    <a href="index.html"><img src="images/logo.png" class="logo" aria-label="fisheye logo" /></a>
   </header>
 
   <main id="main">
